--- a/references.bib
+++ b/references.bib
@@ -2187,3 +2187,14 @@ doi = {10.1201/9781420072884-c30}
   year={2017},
   publisher={Mass Medical Soc}
 }
+
+@article{dennis1981adaptive,
+  title={An adaptive nonlinear least-squares algorithm},
+  author={Dennis Jr, John E and Gay, David M and Walsh, Roy E},
+  journal={ACM Transactions on Mathematical Software (TOMS)},
+  volume={7},
+  number={3},
+  pages={348--368},
+  year={1981},
+  publisher={ACM New York, NY, USA}
+}
