Add intercept comparsion plot beginnings, clarify rstan download underestimate, start working toward TMB Laplace marginals with EB and AGHQ (nice code version)

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -807,6 +807,12 @@ knitr::kable(epil, caption = "Posterior mean and standard deviation results for 
 knitr::include_graphics("figures/naomi-aghq/epil-time.png")
 ```
 
+(ref:intercept-comparison) Intercept comparison.
+
+```{r intercept-comparison, fig.cap="(ref:intercept-comparison)"}
+knitr::include_graphics("figures/naomi-aghq/intercept-comparison.png")
+```
+
 ### An example that `R-INLA` doesn't work for {#unknown}
 
 An example of a model that `R-INLA` can't fit but INLA with `TMB` can.
@@ -1282,7 +1288,7 @@ For wider dissemination of this method, it is important that the user is not bur
 One possibility would be to change the `random` argument in `TMB::MakeADFun` to allow for indexing.
 Another (less desirable) option would be to algorithimically generate the modified `TMB` C++ template based on the original template.
 
-(ref:package-downloads) Monthly R package downloads from the Comprehensive R Archive Network (CRAN) for `brms`, `glmmTMB`, `nimble`, `rstan` and `TMB`, obtained using the @cranlogs R package. Unfortunately, `R-INLA` is not available from CRAN, and so could not be included in this figure.
+(ref:package-downloads) Monthly R package downloads from the Comprehensive R Archive Network (CRAN) for `brms`, `glmmTMB`, `nimble`, `rstan` and `TMB`, obtained using the @cranlogs R package. Unfortunately, `R-INLA` is not available from CRAN, and so could not be included in this figure. The official `rstan` documentation recommends installation of a development version hosted outside CRAN.
 
 ```{r package-downloads, fig.cap="(ref:package-downloads)"}
 knitr::include_graphics("figures/naomi-aghq/package-downloads.png")
