--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -704,7 +704,7 @@ sd_out <- TMB::sdreport(
 )
 ```
 
-(ref:hessian-matrix) A submatrix of the full parameter Hessian obtained from `TMB::sdreport` with `getJointPrecision` on the log scale. Entries for the latent field parameters $\boldsymbol{\mathbf{\epsilon}}$ of length 56 and $\boldsymbol{\mathbf{\nu}}$ of length 236 are omitted. Light grey entries correspond to zeros on the real scale.
+(ref:hessian-matrix) A submatrix of the full parameter Hessian obtained from `TMB::sdreport` with `getJointPrecision = TRUE` on the log scale. Entries for the latent field parameters $\boldsymbol{\mathbf{\epsilon}}$ and $\boldsymbol{\mathbf{\nu}}$ are omitted due to their respective lengths of 56 and 236. Light grey entries correspond to zeros on the real scale, which cannot be log transformed.
 
 ```{r hessian-matrix, fig.cap="(ref:hessian-matrix)"}
 knitr::include_graphics("figures/naomi-aghq/hessian-matrix.png")
@@ -722,16 +722,16 @@ fit <- glmmTMB(
 
 #### Gaussian marginals and AGHQ with `aghq` {#epil-gauss-aghq-tmb}
 
-The objective function `obj` created in Section \@ref(epil-gauss-eb-tmb) may be directly passed to `aghq` to perform inference integrating over the hyperparameters using AGHQ.
-The argument `k` specifies the number of quadrature nodes to be used per dimension of the hyperparameters.
-Here there are two hyperparameters, and `k` is set to three, such that in total there are $3^2 = 9$ quadrature nodes:
+The objective function `obj` created in Section \@ref(epil-gauss-eb-tmb) may be directly passed to `aghq` to perform inference by integrating over the hyperparameters using AGHQ.
+The argument `k` specifies the number of quadrature nodes to be used per hyperparameters dimension.
+Here there are two hyperparameters $\boldsymbol{\mathbf{\theta}} = (\tau_\epsilon, \tau_\nu)$, and `k` is set to three, such that in total there are $3^2 = 9$ quadrature nodes:
 
 ```r
 init <- c(param$l_tau_epsilon, param$l_tau_nu)
 fit <- aghq::marginal_laplace_tmb(obj, k = 3, startingvalue = init)
 ```
 
-Draws from the mixture of Gaussians approximating the latent field posterior distribution (Equation \@ref(eq:)) can be obtained by:
+Draws from the mixture of Gaussians approximating the latent field posterior distribution (Equation \@ref(eq:mixgaussian)) can be obtained by:
 
 ```r
 samples <- aghq::sample_marginal(aghq, M = 4000)$samps
@@ -741,18 +741,17 @@ For a more complete `aghq` vignette, see @stringer2021implementing.
 
 #### Laplace marginals and EB with `TMB` {#epil-laplace-eb-tmb}
 
-The Laplace latent field marginal $\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ may be obtained by setting `random` to $\mathbf{x}_{-i}$ in the `MakeADFun` function call.
-This is not directly possible, as the `random` argument takes a vector of strings as input (e.g. `c("beta", "epsilon", "nu")`) and has no native method for indexing.
+The Laplace latent field marginal $\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ may be obtained using `TMB` by setting `random` to $\mathbf{x}_{-i}$ in the `MakeADFun` function call.
+However, doing so is not directly possible, as the `random` argument takes a vector of strings as input (e.g. `c("beta", "epsilon", "nu")`) and does not have a native method for indexing.
 Instead, the following steps can be taken to modify the `TMB` C++ template to enable the desired indexing:
 
-1. Include `DATA_INTEGER(i)` to pass the index $i$ to `TMB`.
-2. Concatenate the latent field to `PARAMETER_VECTOR(x_minus_i)` and `PARAMETER(x_i)`.
-3. Include `DATA_IVECTOR(x_lengths)` and `DATA_IVECTOR(x_starts)` to pass the start point and lengths of each subvector of $\mathbf{x}$.
-The $j$th subvector may then be obtained using `x.segment(x_starts(j), x_lengths(j))`.
+1. Include `DATA_INTEGER(i)` to pass the index $i$ to `TMB` via the `data` argument.
+2. Concatenate the latent field to `PARAMETER_VECTOR(x_minus_i)` and `PARAMETER(x_i)` such that `random` can be set to `x_minus_i`.
+3. Include `DATA_IVECTOR(x_lengths)` and `DATA_IVECTOR(x_starts)` to pass the start point and lengths of each subvector of $\mathbf{x}$ via the `data` argument.
+The $j$th subvector may then be obtained within the template via `x.segment(x_starts(j), x_lengths(j))`.
 
-As an example, the modified `TMB` C++ template `epil_modified.cpp` for the epilepsy GLMM is in Appendix \@ref(tmb-modified-epil).
-
-It is then possible (after suitable alterations have been made to `dat` and `param`) to obtain the desired objective function via:
+As an example of these steps, the modified `TMB` C++ template `epil_modified.cpp` for the epilepsy GLMM is in Appendix \@ref(tmb-modified-epil), and may be compared to the unmodified version.
+After suitable alterations are made to `dat` and `param`, it is then possible to obtain the desired objective function via:
 
 ```r
 compile("epil_modified.cpp")
@@ -767,13 +766,38 @@ obj_i <- MakeADFun(
 )
 ```
 
-This section takes an EB approach, such that it remains to evaluate $\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$
+This section takes an EB approach, fixing the hyperparameters to their modal value
+\begin{align}
+\tilde p(x_i \, | \, \mathbf{y}) &\approx \tilde p_\texttt{LA}(x_i \, | \, \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y}) \tilde p_\texttt{LA}(\hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA} \, | \, \mathbf{y}) \\
+&\propto \tilde p_\texttt{LA}(x_i, \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y}).
+\end{align}
+The unnormalised posterior marginal $\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ (implemented by `obj_i`) may be evaluated at a set of GHQ nodes $z \in \mathcal{Q}(1, l)$ adapted $z \mapsto x_i(z)$ based on the mode and standard deviation of the Gaussian marginal.
+Here, $l = 5$ was chosen.
+Each evaluation of `obj_i` can be initialised by $\mathbf{x}_{-i}$ set to the mode of the full $N$-dimensional Gaussian approximation $p_\texttt{G}(\mathbf{x} \, | \, \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y})$ with the $i$th entry removed $\hat{\mathbf{x}}(\boldsymbol{\mathbf{\theta}})_{-i}$.
+This is an efficient approach because the $(N - 1)$-dimensional posterior mode, with $x_i$ fixed, is likely to be similar to the $N$-dimensional posterior mode with the $i$th entry removed.
+A normalised posterior can be obtained by computing a de novo posterior normalising constant based on the set of evaluated AGHQ nodes.
+
+This approach requires creation of the objective function `obj_i` for $i = 1, \ldots, N$.
+Each of these functions are then evaluated at a set of $l$ quadrature nodes.
+It is inefficient to run `MakeADFun` from scratch for each $i$, when only one data input `i` is changing.
+`TMB` does have a `DATA_UPDATE` macro, which would allow changing of data "on the R side" without retaping via:
+
+```r
+obj_i$env$data$i <- i
+```
+
+This would be a more efficient approach.
+However, if else statements on updateable data items (as used in `epil_modified.cpp`) are not supported, so this is not yet possible.
 
 #### Laplace marginals and AGHQ with `TMB` {#epil-laplace-aghq-tmb}
 
-```r
-# code here
-```
+The approach taken in Section \@ref(sec:epil-laplace-eb-tmb) may be extended by integrating with respect to the hyperparameters.
+To do so, the quadrature nodes used to integrate $p_\texttt{LA}({\boldsymbol{\mathbf{\theta}}}, \mathbf{y})$ can be reused.
+\begin{align}
+\tilde p(x_i \, | \, \mathbf{y}) &= |\hat{\mathbf{P}}_\texttt{LA}| \sum_{\mathbf{z} \in \mathcal{Q}(m, k)} \tilde p_\texttt{LA}(x_i \, | \, \boldsymbol{\mathbf{\theta}}(\mathbf{z}), \mathbf{y}) \tilde p_\texttt{LA}(\boldsymbol{\mathbf{\theta}}(\mathbf{z}) \, | \, \mathbf{y}) \omega(\mathbf{z}) \\
+&\propto \cdots.
+\end{align}
+Each of the $N$ objective functions is evaluated at $k \times l$ points, rather than the $1 \times l$ points required in the EB approach.
 
 #### NUTS with `tmbstan` {#epil-nuts}
 
