Move Zambia figure generation into repo, writing editing, start reformatting model structure section to follow LM, GLM, GLMM, LGM, ELGM format

--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,5 +1,5 @@
 Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
-I am grateful for the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, the HIV Inference Group at Imperial, and the Machine Learning and Global Health Network across the UK, Denmark, Germany and Singapore.
+I am grateful for the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, the HIV Inference Group at Imperial, and the Machine Learning and Global Health Network.
 Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
 <!-- Boston: Lenni, Lenny, Simon, Janika, Frances, Geetha, Leilani, Tammy. -->
 Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
