--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -33,38 +33,38 @@ knitr::opts_chunk$set(
 
 ## Bayesian statistics
 
-Bayesian statistics is a mathematical paradigm for learning information from data.
-It is especially well suited to facing the challenges posed by Section \@ref(surveillance).
-One foremost reason is that it allows for principled and flexible integration of prior domain knowledge.
-Furthermore, uncertainty over all unknown quantities is handled as an integral part of the Bayesian paradigm.
-This section provides a brief and at times opinionated overview.
+Bayesian statistics is a mathematical paradigm for learning from data.
+It is especially well suited to facing the challenges presented in Section \@ref(surveillance) for the following reasons.
+First, because it allows for principled and flexible integration of prior domain knowledge.
+Second, because uncertainty over all unknown quantities is handled as an integral part of the Bayesian paradigm.
+This section provides a brief and at times opinionated overview of Bayesian statistics.
 For a more complete introduction, I recommend @gelman2013bayesian, @mcelreath2020statistical or @gelman2020bayesian.
 
 ### Bayesian modelling
 
-The Bayesian approach to data analysis is based on construction of a probability model for the observed data $\mathbf{y} = (y_1, \ldots, y_n)$ joint with parameters $\boldsymbol{\mathbf{\phi}} = (\phi_1, \ldots, \phi_d)$.
-Choice of the parameters used in the model depends upon the requirements of the analysis.
-All quantities are assumed to be random variables, and the model is written as $p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$ where $p(\cdot)$ denotes a probability distribution.
+The Bayesian approach to data analysis is based on construction of a probability model for the observed data $\mathbf{y} = (y_1, \ldots, y_n)$.
+Parameters $\boldsymbol{\mathbf{\phi}} = (\phi_1, \ldots, \phi_d)$ are used to describe features of the data.
+Both the data and parameters are assumed to be random variables, with joint probability distribution written as $p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$.
 Subsequent calculations, and the conclusions to follow, are made by manipulating the model using probability theory.
 
-Models are most naturally constructed from two parts, known respectively as the likelihood $p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})$ and the prior distribution $p(\boldsymbol{\mathbf{\phi}})$.
+Models are most naturally constructed from two parts known as the likelihood $p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})$ and the prior distribution $p(\boldsymbol{\mathbf{\phi}})$.
 The joint distribution is obtained by the product of these two parts
 \begin{equation}
-p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) = p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}}).
+p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) = p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}}). (\#eq:joint)
 \end{equation}
 The likelihood, as a function of $\boldsymbol{\mathbf{\phi}}$ with $\mathbf{y}$ fixed, reflects the probability of observing the data when the value of the parameters is $\boldsymbol{\mathbf{\phi}}$.
 The prior distribution encapsulates beliefs about the parameters $\boldsymbol{\mathbf{\phi}}$ before the data are observed.
 
 Recommendations for specifying prior distributions vary.
-The extent to which subjective information should be incorporated into the prior distribution, and in doing so influence the posterior distribution, is a central issue.
+A central issue is the extent to which subjective information should be incorporated into the prior distribution.
 Proponents of the objective Bayesian paradigm [@berger2006case] put forward that the prior distribution should be non-informative, so as not to introduce subjectivity into the analysis.
 Others see subjectivity as fundamental to scientific inquiry, with no viable alternative [@goldstein2006subjective].
-Though subjectivity is most often discussed in the context of the prior distribution specification, we shall see in Section \@ref(hierarchical-lgm-elgm) that the distinction between prior distribution and likelihood is not always clear.
-As such, it may be argued that issues of subjectivity are not unique to prior distribution specification, and ultimately the challenge of specifying the data generating process is better thought of more holistically [@gelman2017prior].
+Though subjectivity typically discussed with regard to the prior distribution, we shall see in Section \@ref(hierarchical-lgm-elgm) that the distinction between prior distribution and likelihood is not always clear.
+As such, it may be argued that issues of subjectivity are not unique to prior distribution specification, and ultimately that the challenge of specifying the data generating process is better thought of more holistically [@gelman2017prior].
 
 The probability model can be simulated from to obtain samples $(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \sim p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$.
-If the samples of $\mathbf{y}$ differ too greatly from what the analyst would expect, then the model does not capture their prior scientific understanding of the data.
-Models which do not produce plausible samples can be refined.
+If the samples of the data $\mathbf{y}$ differ too greatly from what the analyst would expect to see in reality, then the model does not capture their prior scientific understanding.
+Models which do not produce plausible data samples can be refined.
 Checks of this kind [@gelman2013bayesian; Chapter 6] can be used to help iteratively build models, gradually adding complexity as required.
 
 ### Bayesian computation
@@ -75,34 +75,34 @@ Checks of this kind [@gelman2013bayesian; Chapter 6] can be used to help iterati
 knitr::include_graphics("figures/bayesian/conjugate.png")
 ```
 
-The primary goal in a Bayesian analysis is to obtain the posterior distribution $p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y})$.
+Having constructed a model (Equation \@ref(eq:joint)), the primary goal in a Bayesian analysis is to obtain the posterior distribution $p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y})$.
 This distribution encapsulates probabilistic beliefs about the parameters given the observed data.
 As such, the posterior distribution has a central role in use of the statistical analysis for decision making.
+
 Using the eponymous Bayes' theorem, the posterior distribution is obtained by
 \begin{equation}
-p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) = = \frac{p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})}{p(\mathbf{y})} = \frac{p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})}{p(\mathbf{y})}. (\#eq:posterior)
+p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) = \frac{p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})}{p(\mathbf{y})} = \frac{p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})}{p(\mathbf{y})}. (\#eq:posterior)
 \end{equation}
-
 Unfortunately, most of the time it is intractable to calculate the posterior distribution analytically.
 This is because of the potentially high-dimensional integral
 \begin{equation}
 p(\mathbf{y}) = \int p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \text{d}\boldsymbol{\mathbf{\phi}}
 \end{equation}
 in the denominator of Equation \@ref(eq:posterior).
-The evidence $p(\mathbf{y})$ quantifies the probability of obtaining the data under the model.
-Although it is easy to evaluate a quantity proportional to the posterior distribution
+The result of this integral is known as the evidence $p(\mathbf{y})$, and quantifies the probability of obtaining the data under the model.
+Hence, although it is easy to evaluate a quantity proportional to the posterior distribution
 \begin{equation}
 p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}}),
 \end{equation}
 it is typically difficult to evaluate the posterior distribution itself.
 
-The difficulty in performing Bayesian inference in general may be thought of as analogous to the difficulty in calculating integrals.
-As with integration, in some cases closed form analytic solutions are available.
+The difficulty in performing Bayesian inference may be thought of as analogous to the difficulty in calculating integrals.
+As with integration, in specific cases closed form analytic solutions are available.
 Figure \@ref(fig:conjugate) illustrates one such case, where the prior distribution and posterior distribution are in the same family of probability distributions.
-For the more general case where no analytic solution is available, computational methods have been developed to approximate the posterior distribution [@martin2023computing].
-These methods may broadly be divided into Monte Carlo algorithms, and deterministic approximations.
+In the more general case no analytic solution is available, and computational methods must be relied on.
+Computational strategies for approximating the posterior distribution [@martin2023computing] may broadly be divided into Monte Carlo algorithms and deterministic approximations.
 
-#### Monte Carlo algorithms
+#### Monte Carlo algorithms {#monte-carlo}
 
 Monte Carlo algorithms [@robert2005monte] aim to generate samples from the posterior distribution 
 \begin{equation}
@@ -113,23 +113,25 @@ For example, if $G = G(\boldsymbol{\mathbf{\phi}})$ then the expectation of $G$ 
 \begin{equation}
 \mathbb{E}(G \, | \, \mathbf{y}) = \int G(\boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \text{d} \boldsymbol{\mathbf{\phi}} \approx \frac{1}{M} \sum_{i = 1}^M G(\boldsymbol{\mathbf{\phi}}_i).
 \end{equation}
-Most quantities of interest can be cast as posterior expectations.
+Most quantities of interest can be cast as posterior expectations which can then be approximated empirically using samples in this way.
 
 Markov chain Monte Carlo (MCMC) methods [@roberts2004general] are the most popular class of sampling algorithms.
 Using MCMC, samples are generated from by simulating from an ergodic Markov chain with the posterior distribution as its stationary distribution.
 The Metropolis-Hastings [MH; @metropolis1953equation; @hastings1970monte] algorithm uses a proposal distribution $q(\boldsymbol{\mathbf{\phi}}_{i + 1} \, | \, \boldsymbol{\mathbf{\phi}}_i)$ to generate candidate parameters for the next step in the Markov chain.
-Many MCMC algorithms, including the Gibbs sampler, are special cases of MH.
+Many MCMC algorithms, including the Gibbs sampler [@geman1984stochastic], are special cases of MH.
 
-Other notable classes of sampling algorithms include importance sampling (IS) methods, in which the samples are weighted, and sequential Monte Carlo [SMC; @chopin2020introduction] methods based on sampling from a sequence of distributions.
-Though these methods have found applications in specific domains, MCMC is more widely used because of its generality and theoretical reliability.
+Other notable classes of sampling algorithms include importance sampling [IS; @tokdar2010importance] methods in which the samples are weighted, sequential Monte Carlo [SMC; @chopin2020introduction] methods based on sampling from a sequence of distributions, and approximate Bayesian computation [ABC; @sisson2018handbook]
+Though these methods have found applications in specific domains, MCMC is currently more widely used because of its generality, theoretical reliability, as well as benefiting from more accessible software implementations.
 
-This thesis makes use of the No-U-Turn sampler [NUTS; @hoffman2014no], a Hamiltonian Monte Carlo [HMC; @duane1987hybrid; @neal2011mcmc] algorithm, as implemented in the Stan [@carpenter2017stan] probabilistic programming language (PPL).
-HMC uses derivatives of the posterior distribution to generate efficient Metropolis-Hastings proposal distributions based on Hamiltonian dynamics.
+This thesis makes use of the No-U-Turn sampler [NUTS; @hoffman2014no], a Hamiltonian Monte Carlo [HMC; @duane1987hybrid; @neal2011mcmc] algorithm, as implemented in the `Stan` [@carpenter2017stan] probabilistic programming language (PPL).
+HMC uses derivatives of the posterior distribution to generate efficient MH proposal distributions based on Hamiltonian dynamics.
 NUTS automatically adapts the tuning parameters of HMC based local properties of the posterior distribution.
 Though not a one-size-fits-all solution, NUTS has been shown empirically to be a good choice for sampling from a range of posterior distributions.
+Figure \@ref(fig:stan) shows an example of using the NUTS MCMC algorithm to sample from a posterior distribution.
 
 After running an MCMC sampler, it is important to check diagnostics to evaluate convergence and assess whether the results of the Markov chain can be used to accurately compute posterior quantities.
 Panel B of Figure \@ref(fig:stan) shows a traceplot for a Markov chain which has converged.
+A wide range of convergence diagnostics have been developed for MCMC [@roy2020convergence].
 
 (ref:stan) NUTS can be used to sample from the posterior distribution in the example of Figure \@ref(fig:conjugate). Panel A shows a histogram of the NUTS samples as compared to the true posterior. The visual appearance of a histogram depends highly on the number of bins chosen. Other visualisations, such as empirical cumulative difference function plots, though less initially intuitive, are preferred for accurate distributinal sample comparisons. Panel B is a traceplot showing the path of the Markov chain $\{\phi_i\}_{i = 1}^{1000}$ as it explores the posterior distribution. In this case, the Markov chain moves freely throughout the posterior distribution, without getting stuck in any one location for long, indicating good performance of the sampler. Panel C shows the convergence of the empirical posterior mean $\frac{1}{i} \sum_{j \leq i} \phi_j$ to the true value of $\mathbb{E}(\phi)$ as more iterations of the Markov chain are included in the calculation.
 
@@ -139,27 +141,30 @@ knitr::include_graphics("figures/bayesian/stan.png")
 
 #### Deterministic approximations
 
-In variational inference [VI; @blei2017variational] the approximate posterior distribution is assumed to belong to a particular family of functions.
-Optimisation algorithms are used to choose the best member of that family, typically by minimising the Kullback-Leibler divergence to the posterior distribution.
-VI is typically faster than Monte Carlo methods, especially for large datasets or models.
-However, it lacks theoretical guarantees and is known to often inaccurately estimate posterior variances [@giordano2018covariances].
-Developing diagnostics to evaluate the accuracy of VI is an important area of ongoing research [@yao2018yes].
-The well-known expectation maximisation [EM; @dempster1977maximum] and expectation propagation [EP; @minka2001expectation] algorithms are closely related to VI.
+The Monte Carlo algorithms discussed in Section \@ref(monte-carlo) make use of stochasticity to generate samples from the posterior distribution.
+Deterministic approximations are as follows.
 
 The Laplace approximation involves approximating the posterior distribution by a Gaussian distribution.
 The integrated nested Laplace approximation [INLA; @rue2009approximate] combines quadrature with the Laplace approximation.
 The Laplace approximation and INLA are used extensively throughout this thesis.
 A complete introduction is provided in Section \@ref(naomi-inference).
 
+Another prominent determinisitc approach is variational inference [VI; @blei2017variational], in which the approximate posterior distribution is assumed to belong to a particular family of functions.
+Optimisation algorithms are then used to choose the best member of that family, typically by minimising the Kullback-Leibler divergence to the posterior distribution.
+VI is often faster than Monte Carlo methods, especially for large datasets or models.
+However, it lacks theoretical guarantees and is known to often inaccurately estimate posterior variances [@giordano2018covariances].
+Developing diagnostics to evaluate the accuracy of VI is an important area of ongoing research [@yao2018yes].
+The well-known expectation maximisation [EM; @dempster1977maximum] and expectation propagation [EP; @minka2001expectation] algorithms are closely related to VI.
+
 ### Interplay between modelling and computation
 
 Modern computational techniques and software like PPLs have succeeded in abstracting away calculation of the posterior distribution from the analyst for many models.
-However, computation remains intractable in the majority of cases.
-As such, the analyst need not only to be concerned with choosing a model suitable for the data, but also choosing a model for which the posterior distribution is tractable in reasonable time.
+However, computation remains intractable in arguably the majority of cases.
+The analyst need therefore not only to be concerned with choosing a model suitable for the data, but also choosing a model for which the posterior distribution is tractable in reasonable time.
 As such, there is an important interplay between modelling and computation, wherein models are bound by the limits of computation.
 As computation improves, the space of models available to the analyst expands.
 
-## Spatio-temporal statistics 
+## Spatio-temporal statistics {st-statistics}
 
 Spatio-temporal statistics [@cressie2015statistics] concerns observations which are indexed by spatial or temporal location.
 In doing so, it unites the fields of spatial statistics [@bivand2008applied] and time series analysis [@shumway2017time].
@@ -192,17 +197,17 @@ Spatial covariance functions are called isotropic when they apply equally in all
     
 
 2. **Scales**:
-In this thesis I assume that the spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$ has two dimensions, corresponding to latitude and longitude.
+In this thesis the spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$ is assumed to have two dimensions, corresponding to latitude and longitude.
 Observations may be associated to a point $s \in \mathcal{S}$ or area $A \subseteq \mathcal{S}$ in the study region.
-The temporal study period $\mathcal{T} \subseteq \mathbb{R}$ can more generally be assumed to be one dimensional.
-Together with time only moving forward, this feature is what distinguishes time from space.
+The temporal study period $\mathcal{T} \subseteq \mathbb{R}$ can more generally be assumed to be on-dimensional.
+Together with time moving only in the forward direction, this feature is what distinguishes time from space.
 As with space, observations may be associated to a point $t \in \mathcal{T}$ or period of time $T \subseteq \mathcal{T}$.
 Figure \@ref(fig:st) illustrates both types of observation for space and time.
 
-    As such, spatio-temporal observations can be made at various possible scales.
+    Spatio-temporal observations can be made at various possible scales.
     Sometimes, we may want to model data at a scale it was not observed at.
     This is known as the change-of-support problem [@gelfand2001change] and includes as special cases the problems of downscaling, upscaling, and dealing with so-called misaligned data.
-    Closely related is the problem of wanting to jointly model data at different scales simultaneously.
+    Closely related is the problem of jointly modelling data at different scales simultaneously.
 
 3. **Size**:
 Data with both spatial and temporal dimensions are often large, making storage and operations on spatio-temporal data potentially difficult.
@@ -212,139 +217,125 @@ Large data combined with large models make Bayesian inference challenging.
 
 ### Small-area estimation
 
-Data always has a cost to collect.
-This cost can be significant, especially for data relating to people where collection is difficult to automate.
+Data always has some cost to collect.
+This cost can be significant and prohibitive, especially for data relating to people where collection is difficult to automate.
 As a result, given the large number of possible locations in space and time, often no or limited direct observations may be available for any given space-time location.
 Direct estimates of indicators of interest are either impossible or inaccurate in this setting.
 
 Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information.
 In the spatio-temporal setting sharing of information occurs across space and time.
-The fact that observations in one spatio-temporal location are correlated with those at another can be used to improve estimates.
-Figures \@ref(fig:zmb-maps) and \@ref(fig:zmb-scatter) illustrate the unreliability of direct estimates from small sample sizes, and the way in which a spatial model may be used to overcome this limitation.
+The knowledge that observations in one spatio-temporal location are correlated with those at another can be used to improve estimates.
+Figures \@ref(fig:zmb-maps) and \@ref(fig:zmb-scatter) illustrate the unreliability of direct estimates from small sample sizes, as well as the way in which a spatial model may be used to overcome this limitation in part.
 
-More generally, SAE methods are useful when data are limited for subpopulations of interest.
-These subpopulations could be generated by spatio-temporal variables, as well as by other variables such as demographics.
-Just as we expect there to be spatio-temporal correlation structure, we also can expect there to be demographic correlation structure.
-Those of the same sex are more likely to be similar, as are those of similar ages or socioeconomic strata.
-
-(ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size $m = 5, 25, 125$ in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the ratio $y_i / m$. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. HIV estimates for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the higher-resolution constituency level, as program planning is devolved locally. This figure is adapted from a presentation I gave for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids).
+(ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size $m = 5, 25, 125$ in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the empirical ratio of data to sample size. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. The colour palette used in this figure is called viridis, as implemented by the `viridis` R package [@viridis], and was designed to be perceptually uniform and accessible to colourblind viewers [@smith2015better]. This figure was adapted from a presentation given for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids). Estimates of HIV indicators for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the higher-resolution constituency level, as program planning is devolved locally.
 
 ```{r zmb-maps, fig.cap="(ref:zmb-maps)"}
 knitr::include_graphics("figures/bayesian/zmb-maps.png")
 ```
 
-(ref:zmb-scatter) The setting of this figure matches that of Figure \@ref(fig:zmb-maps). Estimates from surveys with higher sample size have higher Pearson correlation coefficient $R$ with the underlying truth. For a fixed sample size, correlation can be improved by using modelled estimates to borrow information across spatial units, rather than using the higher variance direct estimates. Points along the dashed diagonal line correspond to agreement between the estimate obtained from the survey and the underlying truth used to generate the data. For each sample size, using a spatial model increases the correlation between the estimates and underlying truth.
+(ref:zmb-scatter) The setting of this figure matches that of Figure \@ref(fig:zmb-maps). Estimates from surveys with higher sample size have higher Pearson correlation coefficient $R$ with the underlying truth, illustrating the benefit of collecting more data. For a fixed sample size however, correlation can be improved by using modelled estimates to borrow information across spatial units, rather than using the higher variance direct estimates. Points along the dashed diagonal line correspond to agreement between the estimate obtained from the survey and the underlying truth used to generate the data. For each sample size, using a spatial model increases the correlation between the estimates and underlying truth. The effect is more pronounced for lower sample sizes.
 
 ```{r zmb-scatter, fig.cap="(ref:zmb-scatter)"}
 knitr::include_graphics("figures/bayesian/zmb-scatter.png")
 ```
 
-## Model structure {#hierarchical-lgm-elgm}
+More generally, SAE methods are useful when data are limited for subpopulations of interest.
+These subpopulations could be generated by spatio-temporal variables, as well as by other variables such as demographics.
+Just as we expect there to be spatio-temporal correlation structure, we also can expect there to be demographic correlation structure.
+For example, those of the same sex are more likely to be similar, as are those of similar ages or socioeconomic strata.
 
-We have seen that in spatio-temporal statistics, observations are related to each other, and should not all be considered as IID.
-In this section, I will discuss ways in which these relationships can be encoded mathematically via the model structure.
+## Model structure {#model-structure}
+
+Section \@ref(st-statistics) showed that in spatio-temporal statistics observations are related to each other, and should not all be considered as IID.
+This section discuss ways in which the relations between observations can be encoded mathematically.
+Beginning with simple approaches, the expressiveness required to model the data in this thesis is built up in stages.
 
 ### Linear model
 
-A linear model is given by
-\begin{align*}
-y_i &\sim \mathcal{N}(\mu_i, \sigma), \\
-\mu_i &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji}, \\
-\{\beta_j\} &\sim p(\{\beta_j\}), \\
-\sigma &\sim p(\sigma).
-\end{align*}
+In a linear model, each observation $i = 1, \ldots, n$ is modelled using a Gaussian distribution
+\begin{equation}
+y_i \sim \mathcal{N}(\mu_i, \sigma).
+\end{equation}
+The conditional mean $\mu_i$ is assumed to be linearly related to a collection of $l$ covariates
+\begin{equation}
+\mu_i = \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li}.
+\end{equation}
+Priors may be placed on the regression coefficients $\beta_l \sim p(\beta_l)$ for $l = 0, \ldots, p$ as well as the observation standard deviation $\sigma \sim p(\sigma)$
 
 ### Generalised linear model
 
-A generalised linear model (GLM) is given by.
-Things can then be removed from LGM, ELGM which are introduced here.
-
-### Hierarchical models {#hierarchical}
-
-(ref:hierarchical-structure) A simple example of group structure within data in which each individual $i = 1, \ldots, n$ is associated to $m_i$ observations $y_{i1}, \ldots, y_{im_i}$.
-
-```{r hierarchical-structure, fig.cap="(ref:hierarchical-structure)"}
-knitr::include_graphics("figures/bayesian/hierarchical-structure.png")
-```
-
-Group structure is a simple, binary way in which observations are related.
-Figure \@ref(fig:hierarchical-structure) illustrates a case in which each individual in a study is observed some number of times, and observations of the same individual are grouped together.
-Observations from the same individual are more likely to be similar than observations of different individuals.
-Groups can also be nested within other groups, as well as crossed with each other.
-
-Consider three models for this data.
-In each case, the observations are assumed to be Gaussian.
-
-1. **Complete pooling**:
-In the complete pooling model, group structure is ignored and all observations are treated as IID
+A generalised linear model (GLM) extends the linear model by allowing the conditional mean to be connected to the linear predictor via a link function
 \begin{align}
-y_{ij} \sim \mathcal{N}(\mu, \sigma), \\
-(\mu, \sigma) \sim p(\mu, \sigma).
+y_i &\sim p(y_i \, | \, \eta_i), \\
+\mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i).
 \end{align}
-2. **No pooling**:
-Alternatively, the groups can be modelled entirely separately with group specific mean $\mu_i$ and standard deviation $\sigma_i$ parameters
-\begin{align}
-y_{ij} \sim \mathcal{N}(\mu_i, \sigma_i), \\
-(\mu_i, \sigma_i) \sim p(\mu_i, \sigma_i).
-\end{align}
-3. **Partial pooling**:
-In this model, some amount of information is shared between the groups
-\begin{align}
-y_{ij} &\sim \mathcal{N}(\mu_i, \sigma), \\
-\mu_i &= \beta + u_i, \\
-\beta &\sim p(\beta), \\
-\mathbf{u} &\sim p(\mathbf{u}), \\
-\sigma &\sim p(\sigma),
-\end{align}
-where the vector $\mathbf{u} = (u_1, \ldots, u_n)$.
-The parameter $\beta$ applies to all groups, and each group is differentiated by a specific value of $u_i$.
-When inference is performed for the partial pooling model, the extent to which information is shared between groups is learnt rather than fixed at the outset, as with the complete or no pooling models.
-
-Bayesian hierarchical or multilevel models allow control over whether and how information is shared across groups.
-In a three-stage hierarchical model, the parameters are partitioned such that $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$.
-The model for data $\mathbf{y}$ is then
-\begin{align}
-\mathbf{y} &\sim p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}), \\
-\mathbf{x} &\sim p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}), \\
-\boldsymbol{\mathbf{\theta}} &\sim p(\boldsymbol{\mathbf{\theta}}),
-\end{align}
-with posterior distribution proportional to $p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}})$.
-I refer to $\mathbf{x} = (x_1, \ldots, x_n)$ as the latent field, and $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_m)$ as the hyperparameters.
 
 ### Generalised linear mixed effects model
 
-Fixed effects refer to those elements of the latent field which are constant across groups.
-Random effects refer to those elements of the latent field which vary across groups.
-These terms have notoriously many different, and incompatible, definitions which can cause confusion [@gelman2005analysis].
-I nonetheless find them useful to introduce here.
+In a generalised linear mixed effects model (GLMM) the linear predictor is extended as follows
+\begin{equation}
+\eta_i = \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}).
+\end{equation}
+The terms $u_k$ are called random effects, of additional covariates $w_{ki}$.
+The terms $\beta_l$ are then referred to as fixed effects.
+Unfortunately these terms have notoriously many different and incompatible definitions which can cause confusion [@gelman2005analysis].
 
-For concreteness, in the partial pooling model above, the latent field is $\mathbf{x} = (\beta, u_1, \ldots, u_n)$.
-The scalar $\beta$ is a fixed effect which applies to all $n$ groups.
-The vector $\mathbf{u}$ are random effects which alter the mean differently for each group.
-The only hyperparameter is the standard deviation $\theta = \sigma$.
-
-Random effects can also be structured to share information between some groups more than others.
+Random effects allow for more complex sharing of information between observations.
+Complete pooling, no pooling, partial pooling.
+Random effects can be structured to share information between some observations more than others.
 In spatio-temporal statistics, structured spatial and temporal random effects are often used to impose smoothness.
 Spatial random effects are the subject of Chapter \@ref(beyond-borders).
 
-Give equation for a generalised linear mixed model (GLMM) here.
-Describe connection between generalised additive model [GAMs; @wood2017generalized; @hastie1987generalized] and GLMMs.
+A generalised additive model [GAMs; @wood2017generalized; @hastie1987generalized] is a type of GLMM in which such and such.
+
+<!-- Group structure is a simple, binary way in which observations are related. -->
+<!-- Figure \@ref(fig:hierarchical-structure) illustrates a case in which each individual in a study is observed some number of times, and observations of the same individual are grouped together. -->
+<!-- Observations from the same individual are more likely to be similar than observations of different individuals. -->
+<!-- Groups can also be nested within other groups, as well as crossed with each other. -->
+
+<!-- Consider three models for this data. -->
+<!-- In each case, the observations are assumed to be Gaussian. -->
+
+<!-- 1. **Complete pooling**: -->
+<!-- In the complete pooling model, group structure is ignored and all observations are treated as IID -->
+<!-- \begin{align} -->
+<!-- y_{ij} \sim \mathcal{N}(\mu, \sigma), \\ -->
+<!-- (\mu, \sigma) \sim p(\mu, \sigma). -->
+<!-- \end{align} -->
+<!-- 2. **No pooling**: -->
+<!-- Alternatively, the groups can be modelled entirely separately with group specific mean $\mu_i$ and standard deviation $\sigma_i$ parameters -->
+<!-- \begin{align} -->
+<!-- y_{ij} \sim \mathcal{N}(\mu_i, \sigma_i), \\ -->
+<!-- (\mu_i, \sigma_i) \sim p(\mu_i, \sigma_i). -->
+<!-- \end{align} -->
+<!-- 3. **Partial pooling**: -->
+<!-- In this model, some amount of information is shared between the groups -->
+<!-- \begin{align} -->
+<!-- y_{ij} &\sim \mathcal{N}(\mu_i, \sigma), \\ -->
+<!-- \mu_i &= \beta + u_i, \\ -->
+<!-- \beta &\sim p(\beta), \\ -->
+<!-- \mathbf{u} &\sim p(\mathbf{u}), \\ -->
+<!-- \sigma &\sim p(\sigma), -->
+<!-- \end{align} -->
+<!-- where the vector $\mathbf{u} = (u_1, \ldots, u_n)$. -->
+<!-- The parameter $\beta$ applies to all groups, and each group is differentiated by a specific value of $u_i$. -->
+<!-- When inference is performed for the partial pooling model, the extent to which information is shared between groups is learnt rather than fixed at the outset, as with the complete or no pooling models. -->
 
 ### Latent Gaussian model {#lgm}
 
-Latent Gaussian models [LGMs; @rue2009approximate] are a class of three-stage Bayesian hierarchical models in which the middle layer is Gaussian.
-To be more precise, in an LGM, the likelihood is given by
-\begin{align*}
-y_i &\sim p(y_i \, | \, \eta_i, \boldsymbol{\mathbf{\theta}}_1), \quad i = 1, \ldots, n, \\
-\mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i), \\
-\eta_i &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} u_k(w_{ki}).
-\end{align*}
-Each response has conditional mean $\mu_i$ with inverse link function $g: \mathbb{R} \to \mathbb{R}$ such that $\mu_i = g(\eta_i)$.
-The likelihood has a product structure given by $p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\eta}}, \boldsymbol{\mathbf{\theta}}_1) = \prod_{i = 1}^n p(y_i \, | \, \eta_i, \boldsymbol{\mathbf{\theta}}_1)$, where $\boldsymbol{\mathbf{\eta}} = (\eta_1, \ldots, \eta_n)$.
+Latent Gaussian models [LGMs; @rue2009approximate] are a type of GLMMs in which Gaussian priors are used for certain parameters of the model.
+In particular, the parameters $\beta_0$, $\{\beta_j\}$, $\{u_k(\cdot)\}$ are assigned Gaussian prior distributions.
+These parameters can be collected into a vector $\mathbf{x} \in \mathbb{R}^N$ called the latent field such that
+\begin{equation}
+\mathbf{x} \sim \mathcal{N}(\mathbf{0}, \mathbf{Q}(\boldsymbol{\mathbf{\theta}}_2)^{-1}),
+\end{equation}
+where $\boldsymbol{\mathbf{\theta}}_2 \in \mathbb{R}^{s_2}$ are hyperparameters, with $s_2$ assumed small.
 The vector $\boldsymbol{\mathbf{\theta}}_1 \in \mathbb{R}^{s_1}$, with $s_1$ assumed small, are additional parameters of the likelihood.
-The structured additive predictor $\eta_i$ may include an intercept $\beta_0$, fixed effects $\beta_j$ of the covariates $z_{ji}$, and random effects $u_k(\cdot)$ of the covariates $w_{ki}$.
-The parameters $\beta_0$, $\{\beta_j\}$, $\{u_k(\cdot)\}$ are each assigned Gaussian prior distributions, and can be collected into a vector $\mathbf{x} \in \mathbb{R}^N$ such that $\mathbf{x} \sim \mathcal{N}(\mathbf{0}, \mathbf{Q}(\boldsymbol{\mathbf{\theta}}_2)^{-1})$ where $\boldsymbol{\mathbf{\theta}}_2 \in \mathbb{R}^{s_2}$ are further hyperparameters, again with $s_2$ assumed small.
 Let $\boldsymbol{\mathbf{\theta}} = (\boldsymbol{\mathbf{\theta}}_1, \boldsymbol{\mathbf{\theta}}_2) \in \mathbb{R}^m$ with $m = s_1 + s_2$ be all hyperparameters, with prior distribution $p(\boldsymbol{\mathbf{\theta}})$.
+Such that $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$ with posterior distribution
+\begin{equation}
+p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}})
+\end{equation}
 
 ### Extended latent Gaussian model {#elgm}
 
@@ -356,12 +347,12 @@ Put together, ELGMs are of the form
 \begin{align*}
 y_i &\sim p(y_i \, | \, \boldsymbol{\mathbf{\eta}}_{\mathcal{J}_i}, \boldsymbol{\mathbf{\theta}}_1), \quad i = 1, \ldots, n, \\
 \mu_i &= \mathbb{E}(y_i \, | \, \boldsymbol{\mathbf{\eta}}_{\mathcal{J}_i}) = g_i(\boldsymbol{\mathbf{\eta}}_{\mathcal{J}_i}), \\
-\eta_j &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} u_k(w_{ki}), \quad j = 1, \ldots, N_n,
+\eta_j &= \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}), \quad j = 1, \ldots, N_n,
 \end{align*}
 with latent field and hyperparameter prior distributions as in the LGM case.
 
-The ELGM class is well suited to small-area estimation of HIV indicators, and so used throughout the thesis.
-While it can be transformed to an LGM using the Poisson-multinomial transformation [@baker1994multinomial] the multinomial logistic regression model used in Chapter \@ref(multi-agyw) is naturally written as an ELGM where each observation depends on the set of structured additive predictors corresponding to the set of multinomial observations.
+The ELGM class is well suited to small-area estimation of HIV indicators, and used throughout the thesis.
+While it can be transformed to an LGM using the Poisson-multinomial transformation [@baker1994multinomial] the multinomial logistic regression model used in Chapter \@ref(multi-agyw) is most naturally written as an ELGM where each observation depends on the set of structured additive predictors corresponding to the set of multinomial observations.
 In Chapter \@ref(naomi-aghq), the Naomi small-area estimation model used to produce estimates of HIV indicators is shown to have the features of an ELGM.
 
 ## Model comparison
