--- a/references.bib
+++ b/references.bib
@@ -2198,3 +2198,49 @@ doi = {10.1201/9781420072884-c30}
   year={1981},
   publisher={ACM New York, NY, USA}
 }
+
+@article{tokdar2010importance,
+  title={Importance sampling: a review},
+  author={Tokdar, Surya T and Kass, Robert E},
+  journal={Wiley Interdisciplinary Reviews: Computational Statistics},
+  volume={2},
+  number={1},
+  pages={54--60},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@book{sisson2018handbook,
+  title={Handbook of approximate Bayesian computation},
+  author={Sisson, Scott A and Fan, Yanan and Beaumont, Mark},
+  year={2018},
+  publisher={CRC Press}
+}
+
+@article{roy2020convergence,
+  title={Convergence diagnostics for markov chain monte carlo},
+  author={Roy, Vivekananda},
+  journal={Annual Review of Statistics and Its Application},
+  volume={7},
+  pages={387--412},
+  year={2020},
+  publisher={Annual Reviews}
+}
+
+@Manual{viridis,
+  title = {{viridis(Lite)} - Colorblind-Friendly Color Maps for R},
+  author = {{Garnier} and {Simon} and {Ross} and {Noam} and {Rudis}
+    and {Robert} and {Camargo} and Antônio Pedro and {Sciaini} and
+    {Marco} and {Scherer} and {Cédric}},
+  year = {2023},
+  note = {viridis package version 0.6.4},
+  url = {https://sjmgarnier.github.io/viridis/},
+  doi = {10.5281/zenodo.4679423},
+}
+
+@inproceedings{smith2015better,
+  title = {{A Better Default Colormap for Matplotlib}},
+  author = {Smith, Nathaniel and van der Walt, Stéfan},
+  booktitle = {Proceedings of the 14th Python in Science Conference (SciPy)},
+  year = {2015},
+}
