--- a/references.bib
+++ b/references.bib
@@ -382,14 +382,17 @@
   publisher={Taylor \& Francis}
 }
 
-@misc{osgoodzimmerman2021statistical,
-      title={A Statistical Introduction to Template Model Builder: A Flexible Tool for Spatial Modeling}, 
-      author={Aaron Osgood-Zimmerman and Jon Wakefield},
-      year={2021},
-      eprint={2103.09929},
-      archivePrefix={arXiv},
-      primaryClass={stat.ME}
+@article{osgood2023statistical,
+  title={A Statistical Review of Template Model Builder: A Flexible Tool for Spatial Modelling},
+  author={Osgood-Zimmerman, Aaron and Wakefield, Jon},
+  journal={International Statistical Review},
+  volume={91},
+  number={2},
+  pages={318--342},
+  year={2023},
+  publisher={Wiley Online Library}
 }
+
 
 @book{welton2012evidence,
   title={Evidence synthesis for decision making in healthcare},
@@ -2244,3 +2247,15 @@ doi = {10.1201/9781420072884-c30}
   booktitle = {Proceedings of the 14th Python in Science Conference (SciPy)},
   year = {2015},
 }
+
+@article{fournier2012ad,
+  title={AD Model Builder: using automatic differentiation for statistical inference of highly parameterized complex nonlinear models},
+  author={Fournier, David A and Skaug, Hans J and Ancheta, Johnoel and Ianelli, James and Magnusson, Arni and Maunder, Mark N and Nielsen, Anders and Sibert, John},
+  journal={Optimization Methods and Software},
+  volume={27},
+  number={2},
+  pages={233--249},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
